websocket：移除路由内部依赖；增加路由配套中间件；代码清理

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,13 +1,27 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "target": "es2017",
-        "noImplicitAny": false,
-        "sourceMap": true,
-        "baseUrl": "src",
-        "outDir": "./build"
-    },
-    "include": [
-        "./src/**/*"
-    ]
+  "compilerOptions": {
+    "module": "commonjs",
+    "target": "es2017",
+    "noImplicitAny": false,
+    "sourceMap": true,
+    "baseUrl": "./src",
+    "outDir": "./build",
+    "paths": {
+      "~/*": [
+        "./*"
+      ],
+      "model/*": [
+        "./model/*"
+      ],
+      "util/*": [
+        "./util/*"
+      ],
+      "lib/*": [
+        "./lib/*"
+      ]
+    }
+  },
+  "include": [
+    "./src/**/*"
+  ]
 }
